# blockwitness

./: .env  .replit  Deployment.md  Dockerfile  README.md  pyproject.toml  read.md  render.yaml  replit.md  start.sh
.local/state/replit/agent/filesystem/: filesystem_state.json
backend/: .dockerignore  app.py  config.py  crypto_utils.py  render.yaml  requirements.txt
frontend/: index.html  tailwind.config.cjs  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Badge.jsx  Button.jsx  Card.jsx  FileUpload.jsx  Input.jsx
frontend/src/pages/: CreateReport.jsx  Explorer.jsx  Search.jsx  Timeline.jsx  Verify.jsx
