[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==2.3.2",
    "flask-cors==3.0.10",
    "gunicorn>=23.0.0",
    "pillow==10.0.0",
    "pycryptodome==3.19.0",
    "qrcode==7.3",
    "reportlab>=4.4.5",
]
