[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask==2.3.2",
    "flask-cors==3.0.10",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow==9.5.0",
    "psycopg2-binary>=2.9.11",
    "pycryptodome==3.19.0",
    "qrcode==7.3",
    "reportlab>=4.4.5",
]
